--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
   <img id="imagem1" src="lond.jpg">
   <h3>Grupo 01</h3>
   <ul>
+    <div class="parte1">
     <li>Edineia</li>
     <li>Valdir</li>
     <li>Dione</li>
     <li>Vanderlei</li>
     <li> Jean</li>
   </ul>
+</div class="parte1">
   <h1>Cidade de Ponta Grossa</h1>
   <img id="imagem2" src="pont.jpg">
   <h3> Grupo 02</h3>
@@ -26,6 +28,7 @@
     <li>Dayane</li>
     <li> Suelen</li>
     <li> Marilisa</li>
+    <li> Andressa</li>
   </ol>
 </body>
 </html>
